# File-Encryption

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.py  crypted.txt  decrypted.txt  out  test.txt
dependencies/crypto-algorithms/: aes.cpp  aes.h  sha256.cpp  sha256.h
src/: main.cpp
src/main/: batching.h  encryption.cpp  encryption.h  encryptionApi.cpp  encryptionApi.h  encryptionInterface.cpp  encryptionInterface.h  fileAccess.cpp  fileAccess.h  global.cpp  global.h
src/main/API/: encryptionApi.cpp  encryptionApi.h
src/main/API/batching/: batching.cpp  batching.h
src/main/API/batching/chunkEncryption/: chunkEncryption.h
src/main/API/batching/chunkEncryption/dataChunk/: chunkFactory.cpp  dataChunk.h  encryptedDataChunk.h
src/main/API/batching/chunkEncryption/dataChunk/encryption/: encryption.cpp  encryption.h
src/main/API/batching/fileAccess/: fileAccess.cpp  fileAccess.h
src/main/API/global/: exceptionHandling.cpp  exceptionHandling.h  global.cpp  global.h  logger.h
src/main/CLI/: consoleCommands.cpp  consoleCommands.h
src/main/CLI/argumentParser/: argumentParser.cpp  argumentParser.h
src/main/Cli/: consoleRunner.cpp  consoleRunner.h
src/main/Cli/commandConsumer/: commandConsumer.cpp  commandConsumer.h
src/main/Cli/commandConsumer/argumentParser/: argumentParser.cpp  argumentParser.h
src/main/Cli/functionLibrary/: consoleDecryptPrint.h  consoleDecryption.h  consoleDecryptionFunction.h  consoleEncryption.h  consoleEncryptionFunction.h  functionLibrary.cpp  functionLibrary.h  userInput.h
src/main/Cli/functionLibrary/consoleFunction/: consoleFunction.cpp  consoleFunction.h
src/main/Cli/functionLibrary/consoleFunction/argumentConsumer/: argumentConsumer.cpp  argumentConsumer.h  argumentParser.cpp
src/main/batching/: batching.cpp  batching.h  dataChunkFactory.cpp  dataChunkFactory.h
src/main/batching/chunkEncryption/: chunkEncryption.cpp
src/main/batching/chunkEncryption/dataChunk/: chunkFactory.h  dataChunk.h  encryptedDataChunk.h
src/main/batching/chunkEncryption/dataChunk/encryption/: encryption.cpp
src/main/batching/dataChunk/: chunkFactory.cpp  chunkFactory.h  dataChunk.h  dataChunkFactory.cpp  dataChunkFactory.h  encryptedDataChunk.h
src/main/global/: exceptionHandling.cpp  exceptionHandling.h  global.cpp  global.h  logger.cpp  logger.h  timer.cpp  timer.h
src/main/global/logging/: errorHandling.h  logger.h
src/main/global/utils/: logger.h  timer.h  tools.cpp  tools.h
src/test/: encryptionTest.cpp
src/test/integration/: batchingIT.cpp  chunkEncryptionIT.cpp  encryptionApiIT.cpp  encryptionIT.cpp  encryptionInterfaceIT.cpp  encryptionTest.cpp  fileAccessIT.cpp
src/test/integration/Api/: batchingIT.cpp  chunkEncryptionIT.cpp  encryptionApiIT.cpp  fileAccessIT.cpp
src/test/integration/Cli/: argumentConsumerIT.cpp  commandConsumer.cpp  consoleFunctionIT.cpp  consoleRunnerIT.cpp
src/test/unit/: batchingTest.cpp  chunkEncryptionTest.cpp  dataChunkFactoryTest.cpp  encryptionTest.cpp  fileAccessTest.cpp
src/test/unit/Api/: batchingTest.cpp  chunkEncryptionTest.cpp  dataChunkFactoryTest.cpp  encryptionTest.cpp  fileAccessTest.cpp
src/test/unit/Cli/: argumentParserTest.cpp
